# numpyrotils

./: README.md  pyproject.toml
notebooks/: use_ricean_dist_in_simple_model.py
numpyrotils/: __init__.py  _wandb.py  diagnostics.py  distributions.py  optimiser.py  prob.py  svi.py
tests/: test_diagnostics.py  test_fit_svi.py  test_generate_optimiser.py  test_hook_optax.py  test_optimiser_generation.py  test_ricean.py  test_tree_utils.py
